# mysql-proxy

./: Makefile.am  NEWS  configure.in
doc/: Makefile.am  architecture.rst  chassis.rst  conf.py  core.rst  index.rst  log-domains.txt  plugins.rst  protocol.rst  scripting.rst  testing.rst
doc/chapter/: protocol.txt
examples/: tutorial-rewrite.lua
lib/: Makefile.am  chassis.c  commit-obfuscator.lua  glib2.c  load-multi.lua  mysql-binlog.c  mysql-table.c  posix.c
plugins/: Makefile.am
plugins/master/: Makefile.am  master-plugin.c
plugins/replicant/: Makefile.am  replicant-plugin.c  replicant.lua
scripts/: mysql-proxy-config.ini
src/: CMakeLists.txt  Makefile.am  chassis-event-thread.c  chassis-event-thread.h  chassis-frontend.c  chassis-log-config.c  chassis-log-extended.c  chassis-log-extended.h  chassis-log.c  chassis-log.h  chassis-mainloop.c  chassis-mainloop.h  chassis.c  chassis_log_backend.c  chassis_log_backend.h  chassis_log_domain.c  chassis_log_domain.h  chassis_log_error.c  chassis_log_error.h  mysql-binlog-dump.c  mysql-myisam-dump.c  mysql-proxy-cli.c  network-address.c  network-conn-pool-lua.c  network-mysqld-binlog-lua.c  network-mysqld-binlog-lua.h  network-mysqld-binlog.c  network-mysqld-binlog.h  network-mysqld-lua.c  network-mysqld-myisam.c  network-mysqld-myisam.h  network-mysqld-packet.c  network-mysqld-table-lua.c  network-mysqld-table-lua.h  network-mysqld-table.c  network-mysqld-table.h  network-mysqld.c  network-mysqld.h  network-socket.c  network-socket.h
tests/integration/: test_select_timeout.sh
tests/suite/: Makefile.am  (+4 more)
(+22 files in other folders)
